[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tile-cli"
version = "0.1.0"
description = "A local issue tracker built for AI coding agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Tom Yates" }]
keywords = ["issue-tracker", "cli", "ai", "agents", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Bug Tracking",
]

[project.scripts]
tile = "tile:main"

[project.urls]
Homepage = "https://github.com/otherland/tile"
Repository = "https://github.com/otherland/tile"
Issues = "https://github.com/otherland/tile/issues"

[tool.setuptools]
py-modules = ["tile"]
